--- a/public/index.html
+++ b/public/index.html
@@ -97,11 +97,9 @@
         <canvas id="photo-canvas" class="hidden"></canvas>
     </div>
 <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
 
-<script src="config.js"></script>
-
-<script src="app.js"></script> 
+  <script type="module" src="app.js"></script>
 </body>
 </html>
