--- a/public/pembayaran.html
+++ b/public/pembayaran.html
@@ -31,9 +31,9 @@
             <p class="mt-3 text-gray-500">Memverifikasi status Anda...</p>
         </div>
 
-        <button id="pay-button" class="hidden w-full bg-primary-color text-white font-bold py-3 px-6 rounded-lg hover:bg-orange-600 transition-colors shadow-lg">
-            Bayar Rp 25.000 Sekarang
-        </button>
+        <button id="pay-button" class="hidden px-8 py-3 bg-white border-2 border-orange-500 text-orange-500 font-bold rounded-full hover:bg-orange-500 hover:text-white transition-all shadow-xl">
+    Bayar Rp 25.000
+</button>
 
         <p class="text-xs text-gray-400 mt-6">
             Dengan melanjutkan, Anda menyetujui Ketentuan Layanan kami.
